# Robotics_ROS2

./: README.md
bumperbot_ws/: frames_2024-12-18_18.24.57.gv  frames_2024-12-19_16.49.49.gv  frames_2024-12-23_14.52.59.gv  frames_2024-12-25_09.27.20.gv
bumperbot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
bumperbot_ws/install/bumperbot_controller/lib/bumperbot_controller/: noisy_controller  simple_controller  simple_controller.py
bumperbot_ws/install/bumperbot_controller/share/bumperbot_controller/: package.sh  package.xml
bumperbot_ws/install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_action_client  simple_action_server  simple_action_server_node  simple_parameter  simple_publisher  simple_service_client  simple_service_server  simple_subscriber  simple_tf_kinematics  simple_turtlesim_kinematics
bumperbot_ws/install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: local_setup.sh  package.sh  package.xml
bumperbot_ws/install/bumperbot_description/share/bumperbot_description/: package.sh
bumperbot_ws/install/bumperbot_examples/share/bumperbot_examples/: package.bash  package.zsh
bumperbot_ws/install/bumperbot_localization/lib/bumperbot_localization/: imu_republisher.py  kalman_filter
bumperbot_ws/install/bumperbot_localization/share/bumperbot_localization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
bumperbot_ws/install/bumperbot_msgs/share/bumperbot_msgs/: package.sh  package.xml
bumperbot_ws/install/bumperbot_py_examples/share/bumperbot_py_examples/: package.sh  package.xml
bumperbot_ws/install/bumperbot_utils/lib/bumperbot_utils/: trajectory_drawer.py
bumperbot_ws/install/bumperbot_utils/share/bumperbot_utils/: local_setup.sh  package.sh  package.xml
bumperbot_ws/log/: latest_build  latest_list
bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt
bumperbot_ws/src/bumperbot_controller/bumperbot_controller/: noisy_controller.py  simple_controller2.py
bumperbot_ws/src/bumperbot_controller/config/: joy_config.yaml  joy_teleop.yaml
bumperbot_ws/src/bumperbot_controller/include/bumperbot_controller/: noisy_controller.hpp  simple_controller.hpp
bumperbot_ws/src/bumperbot_controller/launch/: joystick_teleop.launch.py
bumperbot_ws/src/bumperbot_controller/src/: noisy_controller.cpp  simple_controller.cpp
bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_cpp_examples/include/bumperbot_cpp_examples/: simple_tf_kinematics.hpp
bumperbot_ws/src/bumperbot_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_tf_kinematics.cpp  simple_turtlesim_kinematics.cpp
bumperbot_ws/src/bumperbot_description/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_description/launch/: gazebo.launch.py
bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
bumperbot_ws/src/bumperbot_localization/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_localization/bumperbot_localization/: imu_republisher.py  kalman_filter.py  kalman_filter_pos.py
bumperbot_ws/src/bumperbot_localization/src/: kalman_filter.cpp
bumperbot_ws/src/bumperbot_msgs/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_py_examples/: setup.py
bumperbot_ws/src/bumperbot_py_examples/bumperbot_py_examples/: simple_service_client.py  simple_tf_kinematics.py
bumperbot_ws/src/bumperbot_utils/: CMakeLists.txt  package.xml
bumperbot_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
bumperbot_ws/src/log/: latest_build
manipulator_ws/: frames_2025-02-04_16.26.43.gv
manipulator_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
manipulator_ws/install/arduinobot_controllers/share/arduinobot_controllers/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
manipulator_ws/log/: latest_build
manipulator_ws/src/arduinobot_controllers/: CMakeLists.txt  package.xml
manipulator_ws/src/arduinobot_description/: CMakeLists.txt
manipulator_ws/src/arduinobot_description/urdf/: arduinobot.urdf.xacro  arduinobot_gazebo.xacro  arduinobot_ros2_control.xacro
manipulator_ws/src/arduinobot_moveit/: CMakeLists.txt
manipulator_ws/src/arduinobot_moveit/config/: moveit_controllers.yaml
(+59 files in other folders)
