<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bumperbot_py_examples</name>
  <version>0.0.0</version>
  <description>ROS 2 Code Examples</description>
  <maintainer email="b.farzanegan@gmail.com">Behzad Farzanegan</maintainer>
  <license>Apache 2.0</license>

  <!-- Build Dependencies -->
  <!-- <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>python3-setuptools</exec_depend> -->

  <!-- Runtime Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>turtlesim</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <!-- Other Runtime Dependencies -->
  <exec_depend>bumperbot_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
